--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
@@ -34,6 +33,8 @@
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
+
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
