--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,11 +1,14 @@
 <ion-header>
+
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Register</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  <ion-list inset>
+<ion-list inset>
 
     <ion-item>
       <ion-label>email</ion-label>
@@ -17,11 +20,12 @@
       <ion-input type="password"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <ion-label>confirm password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+
   </ion-list>
 
-  <button ion-button (click)="status()">Sign In</button>
-  <button ion-button color="secondary"
-          (click)="register()">
-    Register
-  </button>
+  <button ion-button (click)="status()">Register</button>
 </ion-content>
