- Added basic communications with server

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,21 +5,23 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list inset>
+  <form (ngSubmit)="signIn()">
+    <ion-list inset>
 
     <ion-item>
       <ion-label>email</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
     </ion-item>
 
   </ion-list>
 
-  <button ion-button (click)="status()">Sign In</button>
+    <button ion-button type="submit">Sign In</button>
+    </form>
   <button ion-button color="secondary"
           (click)="register()">
     Register
