Add basic whitelist and security policy plugin config

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,3 +1,7 @@
+<head>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' http://us-central1-marinetelmatics.cloudfunctions.net; script-src 'self' localhost https://maps.googleapis.com/ data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+</head>
+
 <ion-header>
   <ion-navbar>
     <ion-title>Home</ion-title>
