--- a/src/pages/limits/limits.html
+++ b/src/pages/limits/limits.html
@@ -6,11 +6,32 @@
 
     <ion-title>Limits</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 <ion-content padding>
   <form (ngSubmit)="setLimits()">
+    <ion-item>
+       <ion-label>Battery High limit</ion-label>
+       <ion-input type="number" placeholder="0.0" [(ngModel)]="boat.battwarningthreshold" name="battalarmthreshold"> </ion-input>
+    </ion-item>
+    <ion-item>
+       <ion-label>Battery Low limit</ion-label>
+       <ion-input type="number" placeholder="0.0" [(ngModel)]="boat.battalarmthreshold" name="battalarmthreshold"> </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label> Bilge Pump 1 Max On Time </ion-label>
+      <ion-input type="number" value="60" [(ngModel)]="boat.bilgepumpmarktime" name="bilgepumpmarktime" > </ion-input>secs
+    </ion-item>
+    <ion-item>
+       <ion-label> Geo Fence Warn </ion-label>
+       <ion-input type="number" placeholder="0" [(ngModel)]="boat.geofencedradius" name="geofencedradius" > feet </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label> Geo Fence Alarm </ion-label>
+      <ion-input type="number" placeholder="0" [(ngModel)]="boat.geofencedfault" name="geofencedfault" > </ion-input>
+    </ion-item>
+   
+    <!-- 
   <ion-grid>
     <ion-row>
       <ion-col>
@@ -35,9 +56,7 @@
       </ion-col>
       <ion-col>
         <ion-item>
-          <ion-label>
-            Bilge Pump 1 Max On Time
-          </ion-label>
+          <ion-label> Bilge Pump 1 Max On Time </ion-label>
           <ion-input type="number"
                      value="60"
                      [(ngModel)]="boat.bilgepumpmarktime"
@@ -50,23 +69,14 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label>
-            Geo Fence Warn
-          </ion-label>
-          <ion-input type="number"
-                     placeholder="1000"
-                     [(ngModel)]="boat.geofencedradius"
-                     name="geofencedradius"
-                     >
-            feet
+          <ion-label> Geo Fence Warn </ion-label>
+          <ion-input type="number" placeholder="1000" [(ngModel)]="boat.geofencedradius" name="geofencedradius" > feet
           </ion-input>
         </ion-item>
       </ion-col>
             <ion-col>
         <ion-item>
-          <ion-label>
-            Geo Fence Alarm
-          </ion-label>
+          <ion-label> Geo Fence Alarm </ion-label>
           <ion-input type="number"
                      placeholder="1200"
                      [(ngModel)]="boat.geofencedfault"
@@ -77,6 +87,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  -->
   <button ion-button>Submit</button>
 </form>
 </ion-content>
