--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,39 +1,43 @@
 <ion-header>
-
   <ion-navbar>
     <ion-title>Register</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <form (ngSubmit)="register()">
+  <form (ngSubmit)='register()'>
     <ion-list inset>
+      <ion-item>
+        <ion-label>email</ion-label>
+        <ion-input type='text' [(ngModel)]='user.email' name='email'></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>password</ion-label>
+        <ion-input type='password' [(ngModel)]='user.password' name='password'> </ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>email</ion-label>
-      <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>confirm password</ion-label>
+        <ion-input type='password' [(ngModel)]='user.confirmPassword' name='passwordConfirm'> </ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>password</ion-label>
-      <ion-input type="password"
-                 [(ngModel)]="password"
-                 name="password">
-      </ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>First Name</ion-label>
+        <ion-input type='text' [(ngModel)]='user.first_name' name='first_name'> </ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>confirm password</ion-label>
-      <ion-input type="password"
-                 [(ngModel)]="confirmPassword"
-                 name="passwordConfirm">
-      </ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>Last Name</ion-label>
+        <ion-input type='text' [(ngModel)]='user.last_name' name='last_name'> </ion-input>
+      </ion-item>
 
-  </ion-list>
+      <ion-item>
+        <ion-label>Phone Number</ion-label>
+        <ion-input type='text' [(ngModel)]='user.mobile_number' name='mobile_number'> </ion-input>
+      </ion-item>
+
+    </ion-list>
 
     <button ion-button>Register</button>
-    </form>
+  </form>
 </ion-content>
