--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,25 +5,25 @@
 </ion-header>
 
 <ion-content padding>
-  <form (ngSubmit)="signIn()">
+  <form (ngSubmit)='signIn()'>
     <ion-list inset>
 
-    <ion-item>
-      <ion-label>email</ion-label>
-      <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>email</ion-label>
+        <ion-input type='text' [(ngModel)]='user.email' name='email'></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>password</ion-label>
-      <ion-input type="password"  [(ngModel)]="password" name="password"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label>password</ion-label>
+        <ion-input type='password'  [(ngModel)]='user.password' name='password'></ion-input>
+      </ion-item>
 
-  </ion-list>
+    </ion-list>
 
-    <button ion-button type="submit">Sign In</button>
-    </form>
-  <button ion-button color="secondary"
-          (click)="register()">
+    <button ion-button type='submit'>Sign In</button>
+  </form>
+  <button ion-button color='secondary'
+    (click)='register()'>
     Register
   </button>
 </ion-content>
