--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,14 +5,14 @@
 </ion-header>
 
 <ion-content padding>
-  <form (ngSubmit)='signIn(authForm.value)' [formGroup]="authForm">
+  <form (ngSubmit)='signIn()' [formGroup]="authForm">
     <ion-list inset>
 
       <ion-item>
         <ion-label>email</ion-label>
         <ion-input type='text'
                    [formControl]="authForm.controls['user.email']"
-                   [(ngModel)]='user.email' 
+                   [(ngModel)]='user.email'
                    name='email'
                    required
                    >
