--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,11 @@
 
 <ion-content padding>
   <form (ngSubmit)='signIn()' [formGroup]="authForm">
-    <ion-list inset>
+    <ion-grid>
+      <ion-row>
+            <ion-col col-12>
 
-      <ion-item>
+              <ion-item fixed>
         <ion-label>email</ion-label>
         <ion-input type='text'
                    [formControl]="authForm.controls['user.email']"
@@ -17,9 +19,19 @@
                    required
                    >
         </ion-input>
-      </ion-item>
-
-      <ion-item>
+              </ion-item>
+              <ion-row>
+                <div [ngClass]="clsExp('user.email')">
+                  <span class="hint">
+                    Type your email
+                  </span>
+                  </div>
+                </ion-row>
+            </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6>
+          <ion-item>
         <ion-label>password</ion-label>
         <ion-input type='password'
                    [formControl]="authForm.controls['user.password']"
@@ -27,14 +39,22 @@
                    name='password'
                    >
         </ion-input>
-      </ion-item>
+          </ion-item>
+          <ion-row>
+                <div [ngClass]="clsExp('user.password')">
+                  <span class="hint">
+                    The password must be 6 characters
+                  </span>
+                  </div>
+                </ion-row>
+        </ion-col>
+        </ion-row>
 
-    </ion-list>
-
+      </ion-grid>
     <button ion-button type='submit' [disabled]='!authForm.valid'>Sign In</button>
   </form>
   <button ion-button color='secondary'
-    (click)='register()'>
+    (click)='register()' >
     Register
   </button>
 </ion-content>
