--- a/src/pages/limits/limits.html
+++ b/src/pages/limits/limits.html
@@ -19,6 +19,11 @@
                  name='battwarninghigh'>
       </ion-input>
     </ion-item>
+    <div [ngClass]="clsExp('boat.battwarninghigh')">
+      <span class="hint">
+        The value must be between 0 and 100
+      </span>
+    </div>
     <ion-item>
       <ion-label>Battery Low limit</ion-label>
       <ion-input type='number'
@@ -28,6 +33,11 @@
                  name='battwarninglow'>
       </ion-input>
     </ion-item>
+    <div [ngClass]="clsExp('boat.battwarninglow')">
+      <span class="hint">
+        The value must be between 0 and 100
+      </span>
+    </div>
     <ion-item>
       <ion-label>Bilge Pump Fault Time</ion-label>
       <ion-input type='number'
@@ -37,6 +47,11 @@
                  name='bilgepumpfaulttime' >
       </ion-input>secs
     </ion-item>
+    <div [ngClass]="clsExp('boat.bilgepumpfaulttime')">
+      <span class="hint">
+        Maximum 60
+      </span>
+    </div>
     <ion-item>
       <ion-label>Geo Radius</ion-label>
       <ion-input type='number'
@@ -47,6 +62,11 @@
         feet
       </ion-input>
     </ion-item>
+    <div [ngClass]="clsExp('boat.georadius')">
+      <span class="hint">
+        Distance in feet/meter
+      </span>
+    </div>
     <ion-item>
       <ion-label>Geo fence alarm</ion-label>
       <ion-input type='number'
@@ -56,7 +76,11 @@
                  name='geofencedfault' >
       </ion-input>
     </ion-item>
-
+    <div [ngClass]="clsExp('boat.geofencedfault')">
+      <span class="hint">
+        Distance in feet/meter
+      </span>
+    </div>
     <button ion-button [disabled]='!limitsForm.valid'>Submit</button>
   </form>
 </ion-content>
